<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.user.UserFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userPicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/user_profile_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/random_picture"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/circleImageView"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/rounded_card_background">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/stub_name"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mailIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/email_icon"
            android:src="@drawable/ic_mail"
            app:layout_constraintBottom_toTopOf="@+id/birthdayIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/stub_email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/mailIcon"
            app:layout_constraintStart_toEndOf="@+id/mailIcon"
            app:layout_constraintTop_toTopOf="@+id/mailIcon" />

        <ImageView
            android:id="@+id/birthdayIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/birthday_cake_icon"
            android:src="@drawable/ic_birthday"
            app:layout_constraintBottom_toTopOf="@+id/locationIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mailIcon" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/stub_birthday"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/birthdayIcon"
            app:layout_constraintStart_toEndOf="@+id/birthdayIcon"
            app:layout_constraintTop_toTopOf="@+id/birthdayIcon" />

        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="@+id/phoneIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdayIcon" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/stub_location"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/locationIcon"
            app:layout_constraintStart_toEndOf="@+id/locationIcon"
            app:layout_constraintTop_toTopOf="@+id/locationIcon" />

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/phone_icon"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toTopOf="@+id/keyIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationIcon" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/stub_phone_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/phoneIcon"
            app:layout_constraintStart_toEndOf="@+id/phoneIcon"
            app:layout_constraintTop_toTopOf="@+id/phoneIcon" />

        <ImageView
            android:id="@+id/keyIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/key_icon"
            android:src="@drawable/ic_key"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneIcon" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/stub_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/keyIcon"
            app:layout_constraintStart_toEndOf="@+id/keyIcon"
            app:layout_constraintTop_toTopOf="@+id/keyIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>