<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/rounded_card_background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userPicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/user_profile_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/random_picture"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/stub_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/phone_icon"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userPicture" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/stub_phone_number"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/phoneIcon"
        app:layout_constraintStart_toEndOf="@+id/phoneIcon"
        app:layout_constraintTop_toTopOf="@+id/phoneIcon" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/phone_icon"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
        app:layout_constraintStart_toEndOf="@+id/phoneNumber"
        app:layout_constraintTop_toTopOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/stub_location"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/locationIcon"
        app:layout_constraintStart_toEndOf="@+id/locationIcon"
        app:layout_constraintTop_toTopOf="@+id/locationIcon" />


</androidx.constraintlayout.widget.ConstraintLayout>